--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,9 +5,10 @@
     tools:context="jp.gcreate.samplerecyclerviewmultipleselection.MainActivity"
     >
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/shuffle"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"
+        android:title="@string/shuffle"
+        android:icon="@drawable/ic_shuffle"
+        app:showAsAction="ifRoom"
         />
 </menu>
