Implement multiple item selection but crash after shuffle

--- a/app/src/main/res/layout/item_sample_data.xml
+++ b/app/src/main/res/layout/item_sample_data.xml
@@ -14,8 +14,11 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:background="@drawable/multiple_selectable_item_background"
         >
 
         <TextView
